# defuss

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  LETTER_OF_RECOMMENDATION.md  README.md  SECURITY.md  SKD_debatte.md  TODO.md  agents.md  biome.json  book.md  bump.sh  defuss_book.md  ionic.config.json  llms.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh  rust-project.json  rust-toolchain.toml  turbo.json  update.sh
.cargo/: config.toml
.github/workflows/: build-and-test.yml  test.yml
ai/code-completion/: ARCH.md  hf_upload.py  requirements.txt  setup.sh  train.py
comparisons/with-next.js-admin-ui/: README.md  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml
example-ssg/: .gitignore  TODO.md  config.ts  package.json  rpc.ts  tsconfig.json
example-ssg/assets/: style.css
example-ssg/components/: aside.tsx  button.tsx  head.tsx  header.tsx  rpc-demo.tsx
example-ssg/lib/: blog-list.tsx  rpc-image-store.ts
example-ssg/pages/: blog.mdx  index.mdx  tos.mdx
examples/admin-dashboard/: astro.config.ts  package.json  tsconfig.json
examples/admin-ui/: README.md  _middleware.ts  openapi.yml  package.json  tsconfig.json
examples/agentic-recipe-chat/: TODO.md
examples/ai-chat/: astro.config.ts  tsconfig.json
examples/ai-ocr/: .env.example  astro.config.ts  package.json  tsconfig.json
examples/apl-demo/: README.md  requirements.txt
examples/astro-integration/: README.md  astro.config.ts
examples/async-rendering-showcase/: README.md  package.json
examples/browser-extension/: README.md  config.ts  example-browser-automation.ts  example-mcp-client.ts  example-mcp-doctor-search.ts  example-mcp-file-search.ts  mcp-server.ts  mcp.json  package.json  tsconfig.json
examples/capacitor-native-app/: capacitor.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts
examples/chat-with-pdf/: TODO.md
examples/composer/: astro.config.ts  package.json
examples/desktop/: package.json  tsconfig.json
examples/dson-integration/: README.md  index.html  package.json  tsconfig.json
examples/editorjs-integration/: README.md  tsconfig.json
examples/wasm-c-rust-matmul/: Cargo.toml  index.html  package.json  vite.config.ts
examples/wasm-c-rust-matmul/public/wasm_c/: wasm_c.d.ts  wasm_c.mjs  wasm_c.wasm.map  wasm_c.wast
examples/wasm-c-rust-matmul/scripts/: compile_c.ts  compile_rust.ts
examples/wasm-c-rust-matmul/src/: index.tsx  lib.rs
examples/wasm-c-rust-matmul/src/.gen/wasm_c/: wasm_c.mjs
examples/wasm-c-rust-matmul/src/utils/: math.ts
scripts/: release.sh  update-deps.js  update-deps.sh
(+784 files in other folders)
