[workspace]
members = [
    "packages/fastmath",
    "packages/lightningimg/lightningimg-wasm",
    "packages/search"
]
resolver = "2"

[profile.release]
opt-level = 3 # Aggressive optimizations
lto = true # Link Time Optimization
codegen-units = 1 # Reduce the number of codegen units to improve inlining and optimizations
strip = "symbols"
